# VideoOverlying

./: CMakeLists.txt  README.md  install.sh  main.cpp  run.sh
Sources/CPPSource/: BackgroundSubtractor.cpp  Overlayer.cpp  Reader.cpp  Tracker.cpp  Utilities.cpp  Writer.cpp  main.cpp
Sources/include/: BackgroundSubtractor.hpp  MyException.hpp  Overlayer.hpp  Reader.hpp  Timer.hpp  Tracker.hpp  Utilities.hpp  Video.hpp  Writer.hpp
